objects/CRM_Mortgage_Applicant_Data__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Applicant_Id__c</fullName>
        <label>Applicant Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Applicant_Role__c</fullName>
        <label>Applicant Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_DESRecordActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DESRecordActiveFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Doc_Header_Id__c</fullName>
        <label>Doc Header Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage Application</label>
        <referenceTo>CRM_Mortgage_Application_Data__c</referenceTo>
        <relationshipLabel>Mortgage Applicants</relationshipLabel>
        <relationshipName>Mortgage_Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Mortgage Applicants</label>
    <nameField>
        <displayFormat>App-{0000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>